welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: not found: value baisseBrosee
def marquerSol2() {baisseBrosee();recule();leveBrosse()}
                   ^