welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def marquerSol1() {baisseBrosse();avance();leveBrosse()}
def marquerSol2() {baisseBrosee();recule();leveBrosse()}

def faireV() {avance();avance();marquerSol1();gauche();avance();marquerSol2();droite();avance();marquerSol1();avance();gauche()}